--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Qkart",
-  "name": "QKart by Crio.do",
+  "name": "QKart by Shyam",
   "icons": [
     {
       "src": "favicon.png",
